# redbit

./: .aider.conf.yml  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  benchmark.html  benchmarks.csv  clippy.toml  kwaak.toml  memo  release.toml  rust-toolchain.toml  summary.json
.github/workflows/: redbit.yml  update-readme.yml
chain/: Cargo.toml  README.md
chain/src/: api.rs  batcher.rs  block_stream.rs  chain_config.rs  combine.rs  err.rs  launcher.rs  lib.rs  monitor.rs  reorder_buffer.rs  scheduler.rs  settings.rs  size_batcher.rs  stats.rs  syncer.rs  task.rs  utils.rs  weight_batcher.rs
chains/: README.md
chains/bch/: Cargo.toml  README.md
chains/btc/: Cargo.toml  README.md
chains/btc/benches/: btc_benchmark.rs
chains/btc/blocks/: avg_block.json  huge_block.json  small_block.json
chains/btc/config/: btc.toml  settings.toml
chains/btc/src/: block_chain.rs  block_provider.rs  btc_client.rs  codec.rs  config.rs  hook.rs  lib.rs  main.rs  model_v1.rs  rest_client.rs  rpc_client.rs  validation.rs
chains/cardano/: Cargo.toml  README.md
chains/demo/: .gitignore  Cargo.toml  README.md
chains/demo/benches/: demo_benchmark.rs
chains/demo/config/: settings.toml
chains/demo/src/: block_chain.rs  block_provider.rs  hook.rs  lib.rs  main.rs  manual_chain.rs  manual_runtime.rs  model_v1.rs  showcase.rs
chains/demo/tests/: block_provider_tip.rs  chain_test.rs  debug_read_heights.rs  entity_test.rs  manual_chain_test.rs  manual_ctx_lifecycle.rs
chains/ergo/: Cargo.toml  README.md
chains/ergo/benches/: ergo_benchmark.rs
chains/ergo/blocks/: huge_block.json  small_block.json
chains/ergo/config/: ergo.toml  settings.toml
chains/ergo/src/: block_chain.rs  block_provider.rs  codec.rs  config.rs  ergo_client.rs  hook.rs  lib.rs  main.rs  model_v1.rs
chains/ergo/tests/: entity_test.rs
chains/ltc/: Cargo.toml  README.md
examples/bitcoin/: Cargo.toml  README.md
examples/btc/: Cargo.toml  README.md
examples/btc/benches/: btc_benchmark.rs
examples/btc/blocks/: avg_block.json  huge_block.json
examples/btc/config/: settings.toml
examples/btc/src/: block_chain.rs  block_persistence.rs  block_provider.rs  btc_client.rs  codec.rs  config.rs  lib.rs  main.rs  model.rs  model_v1.rs
examples/cardano/: .gitignore  Cargo.toml  README.md
examples/cardano/benches/: cardano_benchmark.rs
examples/cardano/blocks/: huge_block.cbor
examples/cardano/config/: cardano.toml  settings.toml
examples/cardano/src/: block_chain.rs  block_persistence.rs  block_provider.rs  cardano_client.rs  codec.rs  lib.rs  main.rs  model.rs  model_v1.rs  storage.rs
examples/demo/: Cargo.toml
examples/demo/benches/: demo_benchmark.rs
examples/demo/config/: settings.toml
examples/demo/src/: block_chain.rs  block_persistence.rs  block_provider.rs  data.rs  lib.rs  main.rs  model_v1.rs  run.rs  showcase.rs  storage.rs
examples/demo/tests/: chain_test.rs  entity_test.rs  sync_test.rs  test.rs
examples/ergo/: .env  Cargo.toml  README.md
examples/utxo/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
examples/utxo/benches/: utxo.rs
examples/utxo/src/: codec.rs  data.rs  db_demo.rs  demo.rs  lib.rs  main.rs  routes.rs  types.rs
examples/utxo/tests/: db_test.rs  test.rs  utxo_test.rs
examples/utxo/ui/: .prettierrc  index.html  package-lock.json  package.json  tsconfig.json
examples/utxo/ui/src/schema/: endpoints.test.ts  generateEndpoints.test.ts  generateEndpoints.ts  generateExample.test.ts  generateExample.ts  inlineSchema.test.ts  inlineSchema.ts  resolveSchema.ts  schema.ts
macros/: Cargo.toml
macros/src/: column.rs  column_macros.rs  compositor.rs  db_column_macros.rs  db_pk_macros.rs  db_relationship_macros.rs  encoding.rs  endpoint.rs  entity.rs  entity_macros.rs  expansion.rs  field.rs  field_parser.rs  http.rs  http_column_macros.rs  http_macros.rs  http_pk_macros.rs  http_relationship_macro.rs  lib.rs  macro_utils.rs  model.rs  pk.rs  pk_macros.rs  relationship.rs  relationship_macros.rs  rest.rs  storage.rs  stream_query.rs  struct_macros.rs  table.rs  transient.rs
macros/src/column/: column_codec.rs  column_impls.rs  delete.rs  get_by.rs  get_keys_by.rs  impls.rs  info.rs  init.rs  mod.rs  query.rs  range_by.rs  store.rs  stream_by.rs  stream_keys_by.rs  stream_parents_by.rs  stream_range_by.rs  transient.rs
macros/src/entity/: chain.rs  compose.rs  context.rs  delete.rs  expand.rs  info.rs  init.rs  manual_accessors.rs  mod.rs  query.rs  sample.rs  store.rs  tests.rs
macros/src/pk/: delete.rs  exists.rs  filter.rs  first.rs  get.rs  init.rs  last.rs  limit.rs  mod.rs  parent_key.rs  parent_pk.rs  pk_range.rs  pointer_impls.rs  range.rs  root_impls.rs  store.rs  stream_range.rs  tail.rs  take.rs
macros/src/relationship/: context.rs  delete.rs  get.rs  info.rs  init.rs  mod.rs  query.rs  store.rs  transient.rs
redbit/: Cargo.toml
redbit/src/: base64_serde_enc.rs  btc_serde_enc.rs  cache.rs  cardano_serde_enc.rs  codec.rs  entity_model.rs  error.rs  hex_serde_enc.rs  lib.rs  logger.rs  macro_rules.rs  manual_entity.rs  query.rs  rest.rs  retry.rs  schema.rs  serde_enc.rs  storage.rs  table.rs  table_dict_read.rs  table_dict_w.rs  table_dict_write.rs  table_index_read.rs  table_index_write.rs  table_plain_write.rs  table_writer.rs  utf8_serde_enc.rs  utils.rs
redbit/src/storage/: async_boundary.rs  bench.rs  cache.rs  cache_bench.rs  context.rs  delayed.rs  index_writer_bench.rs  init.rs  mod.rs  partitioning.rs  router.rs  sort_buffer.rs  table_dict.rs  table_dict_read.rs  table_dict_read_sharded.rs  table_dict_write.rs  table_index.rs  table_index_read.rs  table_index_read_sharded.rs  table_index_write.rs  table_plain.rs  table_plain_read.rs  table_plain_read_sharded.rs  table_plain_write.rs  table_writer.rs  table_writer_api.rs  table_writer_sharded.rs  tx_fsm.rs
syncer/: Cargo.toml  README.md
syncer/src/: api.rs  launcher.rs  lib.rs  monitor.rs  scheduler.rs  settings.rs  syncer.rs
tests/: passing_test.rs  redbit_test.rs
tests/failing/: double_pk_test.rs  (+21 more)
(+69 files in other folders)
