[package]
name = "root"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dev-dependencies]
redbit = { path = "redbit" }
trybuild = "1.0"
redb = "3.0.0"
bincode = "2.0.1"
axum = { version = "0.8.4", features = ["default", "macros"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "debug"] }
utoipa-axum = { version = "0.2.0" ,features = ["debug"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full", "tracing"] }

[workspace]
members = [
    "macros",
    "redbit",
    "chain",
    "examples/demo",
    "examples/cardano",
    "examples/btc",
    "examples/ergo",
]
default-members = ["macros", "redbit", "chain"]