[package]
name = "root"
version = "1.0.7"
edition = "2024"

[features]
ci = []
integration = []
bench = []
chain = ["redbit/chain"]
expansion_structured = ["redbit/expansion_structured"]

[workspace.package]
version = "1.0.7"

[workspace]
members = [
    "macros",
    "redbit",
    "chain",
    "chains/demo",
    "chains/cardano",
    "chains/btc",
    "chains/ergo",
]
default-members = ["macros", "redbit", "chain"]

[profile.dev.package."*"]
debug = false
debug-assertions = false
overflow-checks = false

[dev-dependencies]
redbit = { path = "redbit" }
trybuild = "1.0"
redb = "3.0.2"
bincode = "2.0.1"
axum = { version = "0.8.4", features = ["default", "macros"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "debug"] }
utoipa-axum = { version = "0.2.0" ,features = ["debug"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full", "tracing"] }
