[package]
edition = "2024"
name = "macros"
version.workspace = true

[features]
chain = []
expansion_structured = []
expansion_disabled = []
default = ["expansion_disabled"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1"
syn = "2"
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
prettyplease = "0.2.29"
strum = "0.27.2"
strum_macros = "0.27.2"