[package]
edition = "2024"
name = "macros"
version.workspace = true

[features]
chain = []
expansion_structured = []
default = []

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro-error = "1"
syn = "2"
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
prettyplease = "0.2.29"
strum = "0.27.2"
strum_macros = "0.27.2"
heck = "0.5.0"