[package]
name = "redbit"
version = "0.1.0"
edition = "2021"

[lib]
name = "redbit"

[dependencies]
macros = { path = "../macros" }
thiserror = "2.0.12"
redb = "2.6.0"
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
axum = {  version = "0.8.4", features = ["default", "macros"] }
tokio = { version = "1.45.1", features = ["full"] }
inventory = "0.3.20"
utoipa = { version = "5.3.1", features = ["axum_extras", "debug"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = { version = "0.2.0" ,features = ["debug"] }
axum-test = "18.0.0-rc3"