[package]
name = "redbit"
version = "1.0.2"
edition = "2021"

[lib]
name = "redbit"

[dependencies]
macros = { path = "../macros" }
thiserror = "2.0.12"
redb = "3.0.0"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
axum = {  version = "0.8.4", features = ["default", "macros"] }
tokio = { version = "1.45.1", features = ["full"] }
inventory = "0.3.20"
utoipa = { version = "5.3.1", features = ["axum_extras", "debug"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = { version = "0.2.0" ,features = ["debug"] }
serde_with = {  version = "3.14.0", features = ["hex", "chrono_0_4", "base64", "time_0_3"] }
hex = "0.4.3"
base64 = "0.22.1"
serde_json = "1.0.140"
http = "1.3.1"
rand = "0.9.0"
serde_urlencoded = "0.7.1"
axum-streams = { version = "0.21", features=["json"] }
futures = "0.3.31"
futures-util = "0.3.31"
urlencoding = "2.1.3"
once_cell = "1.20.2"
chrono = "0.4.37"
tower-http = { version = "0.6.6", features = ["cors"] }
lru = "0.16.0"