[package]
name = "syncer"
version = "1.0.2"
edition = "2024"

[dependencies]
redbit = { path = "../redbit" }
futures = "0.3.30"
chrono = "0.4.38"
num_cpus = "1.16.0"
config = "0.15.11"
hex = "0.4.3"
async-trait = "0.1.81"
redb = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full", "tracing"] }
