[package]
edition = "2024"
name = "demo"
version.workspace = true

[features]
default = ["chain", "expansion_structured"]
integration = []
bench = []
ci = []
chain = ["redbit/chain"]
tracing = ["chain/tracing"]
expansion_structured = ["redbit/expansion_structured"]

[[bin]]
name = "demo"
path = "src/main.rs"

[[bin]]
name = "showcase"
path = "src/showcase.rs"

[lib]
doctest = false

[[bench]]
name = "demo_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio", "html_reports"] }
axum-test = "17.3.0"
# pretty_assertions = "1"

[dependencies]
redbit = { path = "../../redbit" }
chain = { path = "../../chain" }
rand = "0.9.0"
axum = {  version = "0.8.4", features = ["default", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
serde_with = {  version = "3.14.0", features = ["hex", "base64", "time_0_3"] }
tower-http = { version = "0.6.6", features = ["cors"] }
anyhow = "1.0.99"
async-trait = "0.1.88"
hex = "0.4.3"