[package]
edition = "2024"
name = "ergo"
version.workspace = true

[features]
default = ["chain"]
integration = []
ci = []
chain = ["redbit/chain"]
tracing = ["chain/tracing"]

[[bench]]
name = "ergo_benchmark"
harness = false

[lib]
doctest = false

[dev-dependencies]
serde_json = "1.0.142"
criterion = { version = "0.7.0", features = ["async_tokio", "html_reports"] }
axum-test = "17.3.0"
pretty_assertions = "1"

[dependencies]
redbit = { path = "../../redbit" }
chain = { path = "../../chain" }
ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", branch = "develop" }
tokio = { version = "1.45.1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
config = "0.15.11"
async-trait = "0.1.81"
futures = "0.3.30"
serde = { version = "1.0.219", features = ["derive"] }
axum = {  version = "0.8.4", features = ["default", "macros"] }
thiserror = "2.0.12"
dotenv = "0.15.0"
chrono = "0.4.38"
anyhow = "1.0.80"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "blocking",
] }
bs58 = { version = "0.5", features = ["check"] }
url = "2.5.4"
num_enum = "0.7.3"
bincode = "2.0.1"
serde_with = {  version = "3.14.0", features = ["hex", "chrono_0_4", "base64", "time_0_3"] }
hex = "0.4.3"