[package]
name = "btc"
version = "1.0.2"
edition = "2024"

[features]
default = []
integration = []

[[bench]]
name = "btc_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

[dependencies]
redbit = { path = "../../redbit" }
syncer = { path = "../../syncer" }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
config = "0.15.11"
bitcoin = "0.32.0"
bitcoincore-rpc = {git = "https://github.com/clarkmoody/rust-bitcoincore-rpc", branch = "support-core-22-and-23"}
bitcoin_hashes = "0.16.0"
async-trait = "0.1.81"
futures = "0.3.30"
serde = { version = "1.0.219", features = ["derive"] }
bech32 = "0.11.0"
bs58 = { version = "0.5", features = ["check"] }
axum = {  version = "0.8.4", features = ["default", "macros"] }
thiserror = "2.0.12"
dotenv = "0.15.0"
chrono = "0.4.38"
anyhow = "1.0.80"
bincode = "2.0.1"
serde_with = {  version = "3.14.0", features = ["hex", "chrono_0_4", "base64", "time_0_3"] }
tower-http = { version = "0.6.6", features = ["cors"] }