[package]
name = "cardano"
version = "1.0.3"
edition = "2024"

[features]
default = []
integration = []
ci = []

[dev-dependencies]
axum-test = "17.3.0"

[dependencies]
redbit = { path = "../../redbit" }
syncer = { path = "../../syncer" }
pallas = "0.33.0"
pallas-traverse = "0.33.0"
anyhow = "1.0.98"
futures = "0.3.31"
config = "0.15.11"
redb = "3.0.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
axum = {  version = "0.8.4", features = ["default", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
bech32 = "0.11.0"
bs58 = { version = "0.5", features = ["check"] }
base64 = "0.22.1"
tokio = { version = "1.45.1", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4.38"
thiserror = "2.0.12"
async-trait = "0.1.81"
hex = "0.4.3"
num_enum = "0.7.3"
bincode = "2.0.1"
serde_with = {  version = "3.14.0", features = ["hex", "chrono_0_4", "base64", "time_0_3"] }
tower-http = { version = "0.6.6", features = ["cors"] }
async-stream = "0.3.6"
futures-core = "0.3.31"