[package]
edition = "2024"
name = "cardano"
version.workspace = true

[features]
default = ["chain"]
integration = []
ci = []
chain = ["redbit/chain"]
tracing = ["chain/tracing"]

[[bench]]
name = "cardano_benchmark"
harness = false

[lib]
doctest = false

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio", "html_reports"] }
axum-test = "17.3.0"

[dependencies]
redbit = { path = "../../redbit" }
chain = { path = "../../chain" }
pallas = "0.33.0"
pallas-traverse = "0.33.0"
anyhow = "1.0.98"
futures = "0.3.31"
config = "0.15.11"
redb = "3.0.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
axum = {  version = "0.8.4", features = ["default", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
bech32 = "0.11.0"
bs58 = { version = "0.5", features = ["check"] }
tokio = { version = "1.45.1", features = ["full", "tracing"] }
dotenv = "0.15.0"
chrono = "0.4.38"
thiserror = "2.0.12"
async-trait = "0.1.81"
hex = "0.4.3"
num_enum = "0.7.3"
bincode = "2.0.1"
serde_with = {  version = "3.14.0", features = ["hex", "chrono_0_4", "base64", "time_0_3"] }
async-stream = "0.3.6"