[package]
name = "demo"
version = "1.0.3"
edition = "2024"

[features]
default = []
integration = []
ci = []

[dev-dependencies]
axum-test = "17.3.0"

[dependencies]
redbit = { path = "../../redbit" }
syncer = { path = "../../syncer" }
rand = "0.9.0"
axum = {  version = "0.8.4", features = ["default", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
serde_with = {  version = "3.14.0", features = ["hex", "base64", "time_0_3"] }
tower-http = { version = "0.6.6", features = ["cors"] }