[package]
name = "utxo"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[[bench]]
name = "utxo"
harness = false

[dev-dependencies]
criterion = "0.6.0"

[dependencies]
rand = "0.9.0"
redbit = { path = "../../redbit" }
axum = {  version = "0.8.4", features = ["default", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
axum-streams = { version = "0.21", features=["json"] }
futures = "0.3.31"
